rating service updates